# vercel_serverless_rust_template

./: Cargo.toml  README.md  vercel.json
api/: mod.rs  vercel.rs
src/: lib.rs  main.rs  structs.rs
src/routes/: people.rs
